--- a/docsrc/tools/templates/template.cshtml
+++ b/docsrc/tools/templates/template.cshtml
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=11" >
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <link type="text/css" rel="stylesheet" href="@Root/content/style.css" /> <!--@Root-->
-    <link type="text/css" rel="stylesheet" href="@Root/style/CSBstyle.css" /> <!--@Root-->
+    <link type="text/css" rel="stylesheet" href="@Root/style/CSBstyles.css" /> <!--@Root-->
     <script type="text/javascript" src="@Root/content/tips.js"></script> <!--@Root-->
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
